Update portfolio: tambah foto baru dan hapus foto lama

--- a/index.html
+++ b/index.html
@@ -201,17 +201,6 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Risky Hotriana</h4>
-              <p><em>Saya adalah lulusan sarjana Ekonomi Pembangunan alumni dari Universitas Malikussaleh.</em></p>
-              <ul>
-                <li>Bukit Indah, Muara Satu, Lhokseumawe, Aceh Utara</li>
-                <li>+62 831-6159-0077</li>
-                <li>riskyhotriana@gmail.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
              <h4>Universitas Malikussaleh | Ekonomi Pembangunan <br> Sept 2019 - Juli 2023</h4>
@@ -219,6 +208,10 @@
                 <li>Prestasi :<br>Lulus sarjana Ekonomi Pembangunan dalam waktu 3 Tahun 8 Bulan dengan IPK 3,61 (predikat sangat baik).</li>
                 <li>Mata Kuliah Relevan:<br>Ekonomi, Sosial, Perbankan, Makro/Mikro Ekonomi, Manajemen Bisnis, Akuntansi.</li>
               </ul>
+            </div>
+
+             <div class="resume-item">
+             <h4>SMKN 2 PANYABUNGAN | Teknik Komputer dan Jaringan <br> 2017 - 2019</h4>
             </div>
 
             <h3 class="resume-title">Organisation</h3>
@@ -283,7 +276,7 @@
               <li data-filter=".filter-award">Award</li>
               <li data-filter=".filter-app">KKN</li>
               <li data-filter=".filter-card">Officially S.E</li>
-              <li data-filter=".filter-model">Model PhotoShoot</li>
+              <li data-filter=".filter-model">Career Experience</li>
             </ul>
           </div>
         </div>
@@ -872,6 +865,24 @@
               <img src="assets/img/portfolio/model9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/model9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Model PhotoShoot"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-model">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/model20.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/model20.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Model PhotoShoot"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-model">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Model21.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Model21.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Model PhotoShoot"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
